Refactor segment index tests to remove unnecessary generic types and improve readability
- Updated `SegmentSplitApplyPlan` and related classes to use a single generic type parameter where applicable.
- Replaced `Thread.sleep` with `LockSupport.parkNanos` in tests to avoid unnecessary thread blocking.
- Adjusted various test methods to remove exception declarations where not needed.
- Enhanced error handling in `ManagementAgentServer` to catch `RuntimeException` instead of generic `Exception`.
- Updated HTML styles in the monitoring console for improved UI consistency.
- Refactored test cases to use `Instant.now()` for timestamp generation instead of calling it multiple times.